# students_scraper

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  main.py  pyproject.toml  test.py  test.txt  utils.py
amo_crm/: api.py  decorators.py  enums.py  job.py  models.py  token_manager.py
app/amo_crm/: api.py  exceptions.py  job.py  models.py  token_manager.py
app/bot/: binding.py  states.py
app/bot/auth/: handler.py
app/bot/daily_stats/: handler.py
app/bot/get_crm_token/: handler.py
app/bot/get_statistic/: handler.py  maps.py  services.py
app/database/: deals_crud.py
app/mpgu/: actualizer.py  api.py  captcha_resolver.py  job.py  models.py  token_manager.py
bot/: binding.py  misc.py  start.py
bot/auth/: handler.py
bot/daily_stats/: handler.py
bot/get_statistic/: callbacks.py  handler.py  maps.py  services.py
database/: applicants_crud.py  deals_crud.py
jobs/: amocrm.py  mpgu.py
mpgu/: actualizer.py  api.py  captcha_resolver.py  job.py  models.py  token_manager.py
mpgu_api/: actualizer.py  applications.py  models.py
