[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Neykuratick <neykuratick@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
aiohttp = "^3.8.1"
aiohttp-requests = "^0.1.3"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
pymongo = "^4.1.1"
motor = "^3.0.0"
psutil = "^5.9.0"
deepdiff = "^5.8.1"
aioauth = "^1.4.0"
amocrm-api = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
